[package]
name = "bevy-tracing-test-example"
version = "0.1.0"
authors = ["Shane Sveller <shanesveller@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = "^0.2.1"
bevy_ecs = "^0.2.1"
bevy_tasks = "^0.2.1"
tracing = "^0.1.21"
tracing-subscriber = "^0.2.14"
